# blas_sgemm_performance_evaluation

./: CMakeLists.txt  README.md  gen_testdata.cpp  plot.ipynb  sgemm.cpp
